--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -12,7 +12,7 @@
         <tbody>
             <tr>
                 <td>Birth Date</td>
-                <td>{{ coach.date_of_birth }}</td>
+                <td>{{ coach.date_of_birth|date:'d F, Y' }}</td>
             </tr>
             <tr>
                 <td>Address</td>
