7_2 diskriminant added, 2-nd check

--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -20,7 +20,7 @@
 </form>
 {% if discr_msg %} 
   <strong>Дискриминант: {{ discr }}</strong>
-  
+  <strong>{{ discr_msg }}</strong>
 {% endif %}
 
 
