--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,73 +1,62 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>PyBursa - Coaches</title>
-<meta charset="utf-8">
+{% extends "base.html" %}
 {% load staticfiles %}
-<!--<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet"> -->
-<link href="{% static 'css/cover.css' %}" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-</head>
 
-<body>
 
-  <!-- Nav bar -->
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-    <a class="navbar-brand" href="http://pybursa.com/">
-    </div>
+{% block title %}{{ coach.first_name }} {{ coach.last_name }}{% endblock title %}
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="{% url 'index' %}">Main</a></li>
-        <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'students:list_view' %}">Students</a></li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<!-- end Nav bar-->
+{% block content %} 
+     
+	<div class="container students">
+    <div class="page-header">
+      <h1 class="top1">{{ coach.first_name }} {{ coach.last_name }}</h1>
 
-<div id="content_container">
-  <div class="student-table">
-    <h1> {{ coach.full_name }}</h1>
-    <table id="full-s">
-      <tr>
-        <td> дата рождения </td>
-        <td> {{ coach.date_of_birth }} </td>
-      </tr>
-      <tr>
-        <td> адрес </td>
-        <td> {{ coach.address }} </td>
-      </tr>
-      <tr>
-        <td> email </td>
-        <td> {{ coach.email }} </td>
-      </tr>
-      <tr>
-        <td> skype </td>
-        <td> {{ coach.skype }} </td>
-      </tr>
-      <tr>
-        <td> телефон </td>
-        <td> {{ coach.phone }} </td>
-      </tr>
-      <tr>
-        <td> курсы учитель</td>
-        <td>  {% for course in coach.courses_coach %}
-          <p><a href="{% url 'courses:detail' course.id %}">{{ course }}</a> студенты курса <a href="{% url 'students:list_view' %}?course_id={{course.id}}"><span class=" glyphicon glyphicon-home"></span></a></p>
-          {% endfor %}</td>
-      </tr>
-      <tr>
-        <td> курсы ассистент</td>
-        <td>  {% for course in coach.courses_assistant %}
-          <p><a href="{% url 'courses:detail' course.id %}"> {{ course }}</a> студенты курса <a href="{% url 'students:list_view' %}?course_id={{course.id}}"><span class=" glyphicon glyphicon-home"></span></a></p>
-          {% endfor %}</td>
-      </tr>
-    </table>
-  </div>
-</div>
-</body>
-</html>
+				<div class="panel panel-default">
+          <!-- Default panel contents -->
+          <!-- Table -->
+          <table class="table">
+            <tbody>
+							<tr>
+                <td>Дата рождения</td><td>{{ coach.date_of_birth|date:"d F, Y" }}</td>
+							</tr>
+							<tr>
+								<td>Адрес</td><td>{{ coach.address }}</td>
+							</tr>
+							<tr>
+								<td>Почта</td><td>{{ coach.user.email }}</td>
+							</tr>
+							<tr>
+								<td>Skype</td><td>{{ coach.skype }}</td>
+							</tr>
+							<tr>
+								<td>Телефон</td><td>{{ coach.phone }}</td>
+							</tr>
+							<tr>
+
+
+  {% for variable in course %}
+  <a href="{% url 'courses:detail' variable.id %}">{{ variable.name }}</a>
+  студенты курса 
+  <a href="{% url 'students:list_view' %}?course_id={{ variable.id }}">
+  <span class="glyphicon glyphicon-education" aria-hidden="true"></span>
+  </a><br>
+  {% endfor %}
+
+							</tr>
+							<tr>
+
+  {% for variable in course %}
+  <a href="{% url 'courses:detail' variable.id %}">{{ variable.name }}</a>
+  студенты курса 
+  <a href="{% url 'students:list_view' %}?course_id={{ variable.id }}">
+  <span class="glyphicon glyphicon-education" aria-hidden="true"></span>
+  </a><br>
+  {% endfor %}
+					
+							</tr>
+						</tbody>
+          </table>
+				</div>
+      </div>
+		</div>
+	</div>    
+{% endblock content %}
